; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/mp4/extr_mp4.c_stream_ReadU32.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/mp4/extr_mp4.c_stream_ReadU32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INT32_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i8*, i64)* @stream_ReadU32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @stream_ReadU32(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 0, i64* %8, align 8
  %9 = load i64, i64* %7, align 8
  %10 = load i64, i64* @INT32_MAX, align 8
  %11 = icmp sgt i64 %9, %10
  br i1 %11, label %12, label %27

12:                                               ; preds = %3
  %13 = load i32*, i32** %5, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load i64, i64* @INT32_MAX, align 8
  %16 = call i64 @vlc_stream_Read(i32* %13, i8* %14, i64 %15)
  store i64 %16, i64* %8, align 8
  %17 = load i64, i64* %8, align 8
  %18 = load i64, i64* @INT32_MAX, align 8
  %19 = icmp slt i64 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %12
  %21 = load i64, i64* %8, align 8
  store i64 %21, i64* %4, align 8
  br label %37

22:                                               ; preds = %12
  %23 = load i64, i64* @INT32_MAX, align 8
  %24 = load i64, i64* %7, align 8
  %25 = sub nsw i64 %24, %23
  store i64 %25, i64* %7, align 8
  br label %26

26:                                               ; preds = %22
  br label %27

27:                                               ; preds = %26, %3
  %28 = load i32*, i32** %5, align 8
  %29 = load i8*, i8** %6, align 8
  %30 = load i64, i64* %8, align 8
  %31 = getelementptr i8, i8* %29, i64 %30
  %32 = load i64, i64* %7, align 8
  %33 = call i64 @vlc_stream_Read(i32* %28, i8* %31, i64 %32)
  %34 = load i64, i64* %8, align 8
  %35 = add nsw i64 %34, %33
  store i64 %35, i64* %8, align 8
  %36 = load i64, i64* %8, align 8
  store i64 %36, i64* %4, align 8
  br label %37

37:                                               ; preds = %27, %20
  %38 = load i64, i64* %4, align 8
  ret i64 %38
}

declare dso_local i64 @vlc_stream_Read(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
